[package]
name = "certifier"
version = "0.1.0"
authors = ["Nicolas K. Ribas <nicolaskribas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

structopt = "0.3"
toml = "0.5.8"
osshkeys = "0.5.0"
serde = {version = "1.0.124", features = ["derive"] }
base64 = "0.13.0"
